@startuml competition_system_v2

entity users {
    * id : bigint <<PK>>
    --
    * full_name : varchar
    * username : varchar <<U>>
    * email : varchar <<U>>
    * password : varchar
    * role : varchar # 'admin', 'committee', 'participant'
    * status : varchar # 'active', 'inactive', 'suspended', 'unverified' 
    --
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
}

entity competitions {
    * id : bigint <<PK>>
    --
    * title : varchar
    * slug : varchar <<fU>>
    * description : text
    * start_date : date
    * end_date : date
    * status : varchar # 'draft', 'published', 'archived'
    --
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
}

entity sub_competitions {
    * id : bigint <<PK>>
    * competition_id : bigint <<FK>>
    --
    * name : varchar
    * slug : varchar <<U>>
    * category : varchar # 'student', 'college', 'general'
    * min_participants : int
    * max_participants : int
    * thumbnail_path: varchar
    * guidebook_path : varchar
    * registration_fee : decimal
    * registration_start : timestamp
    * registration_end : timestamp
    * status : varchar # 'open', 'closed', 'maintenance' 
    --
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
}


entity teams {
    * id : bigint <<PK>>
    * leader_id : bigint <<FK>> (team_members.id)
    --
    * team_name : varchar
    * institution : varchar
    --
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
}

entity team_members {
    * id : bigint <<PK>>
    * team_id : bigint <<FK>>
    --
    * full_name : varchar
    * email : varchar
    * identity_card_path : varchar
    * role_in_team : varchar # 'leader', 'member'
    * verification_status : varchar # 'pending', 'verified', 'rejected'
    --
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
}

entity registrations {
    * id : bigint <<PK>>
    * team_id : bigint <<FK>>
    * sub_competition_id : bigint <<FK>>
    --
    * registration_status : varchar # 'awaiting_payment', 'pending_verification', 'registered', 'rejected'
    --
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
}

entity payments {
    * id : bigint <<PK>>
    * registration_id : bigint <<FK>>
    --
    * transaction_id : varchar <<U>>
    * amount : decimal
    * payment_method : varchar
    * payment_status : varchar # 'pending', 'completed', 'failed', 'expired'
    * paid_at : timestamp
    --
    * created_at : timestamp
}

users ||--o{ teams
teams ||--o{ team_members
teams ||--o{ registrations
sub_competitions ||--o{ registrations
registrations ||--|| payments
competitions ||--o{ sub_competitions

@enduml